# phantom-shield-brave

./: README.md  background.js  bridge-setup.js  font-presets.js  inject.js  isolated.js  lib.js  manifest.json  options.html  options.js  package-lock.json  package.json  popup.html  popup.js  profiles.js  pyproject.toml
bridge/: addon.py  requirements.txt
bridge/launchd/: com.phantom-shield.bridge.plist.template
bridge/systemd/: phantom-shield-bridge.service.template
personas/: example.yaml  tor.yaml
phantom_shield/: __init__.py  __main__.py  catalog.py  cli.py  cookies.py  detectors.py  dns.py  jitter.py  logger.py  persona.py  profiles.json  rate_limit.py  session.py  upstream.py
scripts/: check-profiles.mjs  generate-profiles-json.mjs  install.ps1  install.sh  phantom-browser.cmd  phantom-browser.ps1  phantom-browser.sh  uninstall.ps1  uninstall.sh
tests/: _harness.mjs  background-ch.test.mjs  brave-mask.test.mjs  bridge-setup.test.mjs  harness.test.mjs  lib.test.mjs  manual-checks.md  options-setup.test.mjs  profiles.test.mjs
tests/install/: test_install_sh.sh
tests/launcher/: test_phantom_browser.sh
tests/python/: conftest.py  test_catalog.py  test_cli.py  test_cookies.py  test_detectors.py  test_dns.py  test_jitter.py  test_logger.py  test_persona.py  test_rate_limit.py  test_upstream.py
