[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phantom-shield"
version = "0.6.0"
description = "TLS-fingerprint-aware HTTPS client for OSINT and terminal use. Sibling package to the Phantom Shield Brave extension."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Phantom Shield" }]
dependencies = [
    "curl_cffi>=0.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
phantom = "phantom_shield.cli:main"

[tool.setuptools.packages.find]
include = ["phantom_shield*"]

[tool.setuptools.package-data]
phantom_shield = ["profiles.json"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
